Fixed word wrapping for Restaurant introduction

--- a/app/assets/stylesheets/restaurants.css.scss
+++ b/app/assets/stylesheets/restaurants.css.scss
@@ -119,6 +119,7 @@
           font-family: 'Lato', sans-serif;
           font-weight: 300;
           font-style: italic;
+          word-wrap: break-word;
           .placeholder{
             margin: 0 auto;
             width: 350px;
